dataset upload, notebook and readme reviews

--- a/Project_Interconnect_part1.ipynb
+++ b/Project_Interconnect_part1.ipynb
@@ -26,10 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfcontract = pd.read_csv('/datasets/final_provider/contract.csv')\n",
-    "dfinternet = pd.read_csv('/datasets/final_provider/internet.csv')\n",
-    "dfpersonal = pd.read_csv('/datasets/final_provider/personal.csv')\n",
-    "dfphone = pd.read_csv('/datasets/final_provider/phone.csv')"
+    "dfcontract = pd.read_csv('contract.csv')\n",
+    "dfinternet = pd.read_csv('internet.csv')\n",
+    "dfpersonal = pd.read_csv('personal.csv')\n",
+    "dfphone = pd.read_csv('phone.csv')"
    ]
   },
   {
